@@ -2,7 +2,7 @@
 
 # StarPU --- Runtime system for heterogeneous multicore architectures.
 # 
-# Copyright (C) 2008, 2009, 2010  Université de Bordeaux 1
+# Copyright (C) 2008, 2009, 2010, 2013  Université de Bordeaux 1
 # Copyright (C) 2010  Centre National de la Recherche Scientifique
 # 
 # StarPU is free software; you can redistribute it and/or modify
@@ -16,20 +16,24 @@
 # 
 # See the GNU Lesser General Public License in COPYING.LGPL for more details.
 
+if [ "$#" -lt 2 -o "$1" = --help -o "$1" = -h ]
+then
+	echo "Offline tool to display codelet profile over a traced execution"
+	echo ""
+	echo "Usage: $0 distrib.data codelet_name"
+	exit 1
+fi
 
 inputfile=$1
+codelet_name=$2
 
-archlist=`cut -f 1 $inputfile | sort | uniq | xargs` 
-hashlist=`cut -f 2 $inputfile | sort | uniq | xargs` 
+archlist=`< $inputfile grep "^$codelet_name	" | cut -f 2 | sort | uniq | xargs` 
 
 # extract subfiles from the history file
 for arch in $archlist
 do
-	for h in $hashlist
-	do
-		echo "pouet $arch - $h "
-		grep "^$arch	$h" $inputfile > $inputfile.$arch.$h
-	done
+		echo "Arch $arch"
+		grep "^$codelet_name	$arch" $inputfile > $inputfile.$arch
 done
 
 # create the gnuplot file
@@ -41,6 +45,9 @@ echo "set term postscript eps enhanced color" 	>> $gpfile
 echo "set logscale x"				>> $gpfile 
 echo "set logscale y"				>> $gpfile 
 echo "set output \"$inputfile.eps\""		>> $gpfile
+echo "set key top left"				>> $gpfile
+echo "set xlabel \"Total data size\""		>> $gpfile
+echo "set ylabel \"Execution time (ms)\""	>> $gpfile
 
 echo -n "plot	" 				>> $gpfile
 
@@ -48,8 +55,6 @@ first=1
 
 for arch in $archlist
 do
-	for h in $hashlist
-	do
 		if [ $first = 0 ] 
 		then
 			echo -n "  , " >> $gpfile
@@ -57,8 +62,5 @@ do
 			first=0
 		fi
 
-		echo -n " \"$inputfile.$arch.$h\" using 3:4  title \"arch $arch hash $h\" " >> $gpfile
-	done
+		echo -n " \"$inputfile.$arch\" using 3:5  title \"${codelet_name//_/\\\\_} arch $arch\"" >> $gpfile
 done
-
-gnuplot $gpfile
